Fix resize distortion in first block
When the page was ressized there would be a distortion in the first
block product of the justify-content: space-between property.

Fix it by limiting the width of the existing containers and adding
an aditional container to keep it centered.

--- a/style.css
+++ b/style.css
@@ -7,12 +7,20 @@ body {
     margin: 0;
   }
 
+.container {
+  background: #1f2937;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .header {
     background: #1f2937;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 8px 180px;
+    width: 1024px;
   }
 
   .header_logo {
@@ -40,6 +48,7 @@ body {
     justify-content: space-between;
     padding: 80px 180px;
     padding-bottom: 130px;
+    width: 1024px;
   }
 
   .content_title {
